--- a/estilo.css
+++ b/estilo.css
@@ -30,7 +30,7 @@
   .cell {
     background-color: #0092B9;
     border: 1px solid #0092B9;
-    font-size: 30px;
+    font-size: 29apx;
     cursor: pointer;
     width: 100px; 
     height: 100px;
